fixed slight horizontal scrolling on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -414,7 +414,7 @@ input[type="text"]:focus {
 }
 
 /* show the checkboxes relevant for the DA193 profession when it is selected */
-#apply-employment-details:has(option[value="BC279"]:checked) .apply-checkbox-set-blockchain {
+#apply-employment-details:has(option[value="BC123"]:checked) .apply-checkbox-set-blockchain {
 	display: block;
 }
 
@@ -611,7 +611,7 @@ input[type="text"]:focus {
         flex-wrap: nowrap;
         width: 100%;
         height: auto;
-        padding: 10px;
+        padding: 25px 0px;
         margin: auto;
         border-radius: 0px;
     }
